--- a/_config.yml
+++ b/_config.yml
@@ -385,8 +385,8 @@ han: false
 # TODO: longc
 # Disqus
 disqus:
-  enable: false
-  shortname:
+  enable: true
+  shortname: sleepworm
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
