--- a/_config.yml
+++ b/_config.yml
@@ -386,7 +386,7 @@ han: false
 # Disqus
 disqus:
   enable: true
-  shortname: sleepworm
+  shortname: sleepworm-github-io
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
